--- a/app/globals.css
+++ b/app/globals.css
@@ -122,9 +122,9 @@ body {
         }
     }
 
-    video {
+    /* video {
         @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
-    }
+    } */
 
     #cocktails {
         @apply relative min-h-dvh w-full overflow-hidden;
@@ -246,19 +246,21 @@ body {
         }
 
         .masked-container {
+            @apply flex flex-col justify-center  items-center  gap-5;
+
             h2 {
-                @apply text-4xl md:text-5xl  text-center mb-10 text-white mt-32;
+                @apply text-4xl md:text-5xl text-white;
             }
 
             div {
-                @apply opacity-0 md:px-0 px-5 space-y-5 absolute md:bottom-5 bottom-52 left-1/2 -translate-x-1/2;
+                @apply opacity-0   space-y-5 relative;
 
                 h3 {
-                    @apply md:text-5xl text-2xl text-center font-serif md:w-full w-80 text-white;
+                    @apply md:text-5xl text-2xl   font-serif md:w-full md:pt-8 w-80 text-white;
                 }
 
                 p {
-                    @apply text-lg text-center;
+                    @apply text-lg;
                 }
             }
         }
